# bininfo-rs

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: linux_arm7.yml  linux_x86-64.yml  macos.yml  windows.yml
examples/: cli.rs
src/: entry_point.rs  error.rs  lib.rs  sections.rs
src/elf/: mod.rs
src/pe/: hash.rs  imports.rs  mod.rs  resource.rs  rich_headers.rs  signatures.rs  tls.rs  util.rs
