[package]
name = "file_info"
authors = ["SG", "Andrey Mnatsakanov", "Clement Karimi"]
description = "Provides file information for PE and ELF files"
version = "0.3.2"
edition = "2021"

[dependencies]
authenticode = "0.4.3"
goblin = { version = "0.8.2" }
exe = "0.5.6"
hex = "0.4.3"
serde = { version = "1.0.210", features = ["derive"] }
entropy = "0.4.2"
phf = { version="0.11.2" , features = ["macros"] }
pkbuffer = "0.4.1"
bytemuck = "1.19.0"
cms = { version = "0.2.0", default-features = false }
lazy_static = "1.5"

[dev-dependencies]
prettytable-rs = "0.10.0"
humanize = { git = "https://github.com/marirs/humanize-rs.git", branch = "master" }

[build-dependencies]
nom = "7"

[features]
serde = ["serde/derive"]

[[example]]
name = "fileinfo"
path = "examples/cli.rs"

[profile.dev]
opt-level = 3
debug-assertions = false

[profile.release]
codegen-units = 1
debug-assertions = false
debug = false
opt-level = 3
lto = true
