[package]
name = "bininfo"
authors = ["SG", "Andrey Mnatsakanov", "Clement Karimi"]
description = "Provides file information for PE and ELF files"
version = "0.4.4"
include = [
    "assets",
    "src"
]
categories = ["filesystem"]
keywords = ["binary", "extended", "information"]
license-file = "LICENSE"
edition = "2021"

[dependencies]
authenticode = "0.4.3"
bytemuck = "1.19.0"
cms = { version = "0.2.0", default-features = false }
entropy = "0.4.2"
exe = "0.5.6"
goblin = { git = "https://github.com/mnaza/goblin.git"}
hex = "0.4.3"
lazy_static = "1.5"
phf = { version="0.11.2" , features = ["macros"] }
pkbuffer = "0.4.1"
rust-crypto = "0.2"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
prettytable-rs = "0.10.0"

[features]
serde = ["serde/derive"]

[[example]]
name = "bininfo"
path = "examples/cli.rs"

[profile.dev]
opt-level = 3
debug-assertions = false

[profile.release]
codegen-units = 1
debug-assertions = false
debug = false
opt-level = 3
lto = true
